fix: resolve all pmd appointments